[tool.poetry]
name = "game_server"
version = "0.1.0"
description = "A very basic Echo Server."
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
